<resources>
    <string name="app_name">Kubiks</string>
    <string name="count_dice">Количество кубиков:</string>
    <string name="oneone">TODO</string>
    <string name="twotwo">TODO</string>
    <string name="back">Назад</string>
    <string name="back_first">TODO</string>
    <string name="back_button_first">TODO</string>
    <string name="second_back_button">TODO</string>
    <string name="imgviewone">TODO</string>
    <string name="onedice">TODO</string>
    <string name="startimg">TODO</string>
    <string name="prompt_language_rus">Выберите язык</string>
    <string name="prompt_language_eng">Choose language</string>
    <string name="prompt_phone_rus">Выберите фон</string>
    <string name="prompt_phone_eng">Choose phone</string>
    <string name="sound_textview_eng">SOUND</string>
    <string name="sound_textview_rus">ЗВУК</string>
    <string-array name="colors">
        <item>Голубой</item>
        <item>Зеленый</item>
        <item>Розовый</item>,
        <item>Фиолетовый</item>
    </string-array>
    <string-array name="colors_eng">
        <item>Blue</item>
        <item>Green</item>
        <item>Pink</item>
        <item>Purple</item>
    </string-array>
    <string-array name="languages">
        <item>Русский</item>
        <item>English</item>
    </string-array>
</resources>
