<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fonchiko"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:alpha="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:srcCompat="@drawable/start_phone"
        android:contentDescription="@string/startimg" />

    <ImageButton
        android:id="@+id/one_dice"
        android:layout_width="233dp"
        android:layout_height="220dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/oneone"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.185"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.223"
        app:srcCompat="@drawable/kubikone" />

    <ImageButton
        android:id="@+id/two_dices"
        android:layout_width="265dp"
        android:layout_height="204dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/twotwo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.798"
        app:srcCompat="@drawable/kubikitwo" />




</androidx.constraintlayout.widget.ConstraintLayout>