<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundsecw"
    tools:context=".two_kubiks"
    tools:ignore="ExtraText">

    <ImageButton
        android:id="@+id/bbutton"
        android:layout_width="81dp"
        android:layout_height="63dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/back_button_first"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/backbutton" />

    <ImageButton
        android:id="@+id/pbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@null"
        android:contentDescription="@string/second_back_button"
        android:layout_alignParentBottom="true"
        android:scaleY="0.6"
        android:scaleX="0.6"
        android:layout_marginBottom="35dp"
        app:srcCompat="@drawable/playbutton" />

    <ImageView
        android:id="@+id/imageViewdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgviewone"

        app:srcCompat="@drawable/dicedth" />

    <ImageView
        android:id="@+id/imageViewup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imgviewone"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        app:srcCompat="@drawable/diceuth" />

</RelativeLayout>